<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="0dp">
        <!-- Device Information Block -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="16dp"
         >

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_card"
            android:padding="16dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="16dp"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="8dp">

                <ImageView
                    android:layout_width="24dp"
                     android:layout_height="24dp"
                    android:padding="3dp"
                    android:src="@drawable/credit_card"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/device_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/license_period"
                    android:textSize="11sp"
                    android:fontFamily="@font/figtree_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="8dp">

                <ImageView
                    android:layout_width="24dp"
                     android:layout_height="24dp"
                    android:padding="3dp"
                    android:src="@drawable/database"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/device_root"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/root_access"
                    android:textSize="11sp"
                    android:fontFamily="@font/figtree_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="8dp">

                <ImageView
                    android:layout_width="24dp"
                     android:layout_height="24dp"
                    android:padding="3dp"
                    android:src="@drawable/document"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/device_os_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/os_version"
                    android:textSize="11sp"
                    android:fontFamily="@font/figtree_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="8dp">

                <ImageView
                    android:layout_width="24dp"
                     android:layout_height="24dp"
                    android:padding="3dp"
                    android:src="@drawable/mobile"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_name"
                    android:textSize="11sp"
                    android:fontFamily="@font/figtree_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="8dp">

                <ImageView
                    android:layout_width="24dp"
                     android:layout_height="24dp"
                    android:padding="3dp"
                    android:src="@drawable/bar_chart_alt"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/device_ram"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ram"
                    android:textSize="11sp"
                    android:fontFamily="@font/figtree_medium" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>