<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@drawable/background_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/gamecardimage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="Game Image"
            android:scaleType="centerCrop"
            android:src="@drawable/arena_gl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:shapeAppearanceOverlay="@style/RoundedImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/gamecardoverlayimage"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="top|start"
        android:layout_margin="16dp"
        android:src="@drawable/ic_garena"
        android:contentDescription="Overlay Icon" />

    <FrameLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#00000000"
        >


    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurViewCards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:background="@drawable/blur_rounded_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:background="#00000000"
        android:gravity="center_vertical">







        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/gamenameincard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_name"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:fontFamily="@font/figtree_semibold"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/gameversionincard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_or_region"
                android:textColor="#CCCCCC"
                android:textSize="8sp"
                android:fontFamily="@font/figtree_medium"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

        <TextView
            android:id="@+id/get_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_circle2"
            android:text="@string/get"
            android:textSize="8sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:fontFamily="@font/figtree_semibold"
            android:contentDescription="Get Button" />
    </LinearLayout>
    </FrameLayout>
</FrameLayout>