<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false">
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"
        android:focusable="false">


        <ImageView
            android:id="@+id/back"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="200dp"
            android:layout_gravity="center|end"
            android:scaleType="centerCrop"
            android:translationX="150dp"
            android:src="@drawable/object1"
            android:clickable="false"
            android:focusable="false" />

        <ImageView
            android:id="@+id/back2"
            android:layout_width="600dp"
            android:layout_height="600dp"
            android:layout_marginTop="200dp"
            android:layout_gravity="start|center"
            android:scaleType="centerCrop"
            android:src="@drawable/object2"
            android:translationX="-200dp"
            android:clickable="false"
            android:focusable="false" />
        <eightbitlab.com.blurview.BlurView
            android:id="@+id/blurViewBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:background="@drawable/mainbg" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#00ED0000"
        android:paddingTop="30dp">

        <RelativeLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#00000000">

            <ImageView
                android:id="@+id/menu_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_circle2"
                android:src="@drawable/info"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:contentDescription="Left" />

            <ImageView
                android:id="@+id/logo_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/logo"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:contentDescription="Center" />

            <ImageView
                android:id="@+id/logo_logout"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_circle2"
                android:src="@drawable/log_out"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:contentDescription="Right" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/contenttt"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            </FrameLayout>

            <FrameLayout
                android:id="@+id/bottom_bar"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:padding="10dp"
                android:layout_gravity="bottom">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/bottom_bar_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/nav_gradient"
                   />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="3dp"
                    android:gravity="center"
                    >

                    <ImageView
                        android:id="@+id/nav_main"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:src="@drawable/game"
                        android:scaleType="centerInside"
                        android:contentDescription="Main"
                        app:tint="@color/nav_icon_tint" />
                        
                   <ImageView
                        android:id="@+id/nav_login"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:src="@drawable/login"
                        android:scaleType="centerInside"
                        app:tint="@color/nav_icon_tint" />

                    <ImageView
                        android:id="@+id/nav_apps"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:src="@drawable/category"
                        android:scaleType="centerInside"
                        app:tint="@color/nav_icon_tint" />

                    <ImageView
                        android:id="@+id/nav_profile"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:padding="12dp"
                        android:src="@drawable/setting"
                        android:scaleType="centerInside"
                        android:contentDescription="Profile"
                        app:tint="@color/nav_icon_tint"/>
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>

        <!-- Нижняя навигация -->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:clickable="true"
            android:focusable="true"
            android:background="#CC000000" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:background="#CC000000" />


    <FrameLayout
        android:id="@+id/centered_nav_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:background="#80000000"
        android:elevation="20dp">

        <eightbitlab.com.blurview.BlurView
            android:id="@+id/blurww"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/centered_nav_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="24dp"
            android:background="@drawable/button_gradient"
            android:elevation="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_x_project"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_x_project_description"
                android:textColor="#DDDDDD"
                android:textSize="14sp"
                android:gravity="center"
                android:padding="12dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#44FFFFFF" />

            <TextView
                android:id="@+id/contact_telegram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_via_telegram"
                android:textColor="#00BFFF"
                android:textSize="14sp"
                android:gravity="center"
                android:padding="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:textColor="#88FFFFFF"
                android:textSize="12sp"
                android:gravity="center"
                android:paddingBottom="8dp" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progressOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:elevation="16dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
    </FrameLayout>
</androidx.drawerlayout.widget.DrawerLayout>